--- a/style.css
+++ b/style.css
@@ -10,11 +10,13 @@ body {
 header {
     height: 65px;
     display: flex;
-    /* justify-content: space-between;  */
+    justify-content: space-between; 
+   align-items: center;
+   padding: 0 20px;
     
 }
 header div {
-    height: 100px;
+    /* height: 100px; */
 }
 .menu-icon {
     background-image: url(./assets/menu.svg);
@@ -22,6 +24,8 @@ header div {
     height: 24px;
     background-size: cover;
     background-repeat: no-repeat;
+    border: none;
+    outline: none;
 }
 .logo-el {
     background-image: url(./assets/LOGO.png);
@@ -36,4 +40,47 @@ header div {
     height: 24px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: #E8F4FA;
+    border-radius: 4px;
+    border: none;
+}
+.banner {
+    width: 100%;
+    height: auto;
+    
+}
+.buttons{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px;
+}
+.buttons-ways {
+    border: 1px solid #1774A3;
+    width: 96px;
+    height: 32px;
+    font-size: 10px;
+    font-weight: 400;
+    color:#0C3A52;
+    border-radius: 8px;
+    /* padding: 5px 15px; */
+    text-align: center;
+    padding: 8px 0;
+    
+}
+.select {
+    color: white;
+    background-color: #1D91CC;
+}
+.travel-info {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    align-items: center;
+
+}
+.travel-info input {
+    width: 320px;
+    height: 40px;
+    border: 1px solid #DFDFDF;
+    border-radius: 8px;
 }
