--- a/style.css
+++ b/style.css
@@ -19,40 +19,48 @@ header div {
     /* height: 100px; */
 }
 .menu-icon {
-    background-image: url(./assets/menu.svg);
-    width: 24px;
-    height: 24px;
-    background-size: cover;
+    /* background-image: url(./assets/menu.svg); */
+    /* width: 24px;
+    height: 24px; */
+    /* background-size: cover; */
     /* background-repeat: no-repeat; */
-    border: none;
-    outline: none;
+    
 }
 .logo-el {
-    background-image: url(./assets/LOGO.png);
-    width: 95px;
-    height: 32px;
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* background-image: url(./assets/LOGO.png); */
+    /* width: 95px;
+    height: 32px; */
+    
 }
 .user-icon {
-    background-image: url(./assets/user.png);
-    width: 24px;
-    height: 24px;
-    background-size: cover;
+    /* background-image: url(./assets/user.png); */
+    /* width: 24px;
+    height: 24px; */
+    /* background-size: cover;
     background-repeat: no-repeat;
     background-color: #E8F4FA;
     border-radius: 4px;
-    border: none;
+    border: none; */
 }
+/* main */
+
+
+
+
+
 .banner {
     width: 100%;
-    height: auto;
+    height: 140px;
+    background-image: url(./assets/home.png) ;
+    background-size: cover;
+    background-repeat: no-repeat;
     
 }
 .buttons{
     display: flex;
     justify-content: space-evenly;
     margin: 20px;
+    
 }
 .buttons-ways {
     border: 1px solid #1774A3;
@@ -78,20 +86,46 @@ header div {
     align-items: center;
 
 }
-.travel-info form select{
+.travel-info form input{
     width: 320px;
     height: 40px;
     border: 1px solid #DFDFDF;
     border-radius: 8px;
     direction: rtl;   
-     padding: 0 20px;
-     font-size: 12px;
-     font-weight: 400;
+    padding: 0 20px;
+    font-size: 12px;
+    font-weight: 400;
+    margin-top: 20px;
 }
-select {
+input {
     -moz-appearance:none; /* Firefox */
     -webkit-appearance:none; /* Safari and Chrome */
     appearance:none;
+    /* position: relative; */
 }
 
+/* form {
+    position: relative;
+} */
+.start-lable {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
 
+form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20 px;
+}
+
+form button {
+    width: 320px;
+    height: 40px;
+    border: none;
+    border-radius: 8px;
+    background-color: #1D91CC;
+    color: white;
+    margin-top: 20px;
+
+}
