--- a/style.css
+++ b/style.css
@@ -4,128 +4,127 @@
     margin: 0;
 }
 body {
-    font-family: 'Iranian Sans', sans-serif;
+    
+    direction: rtl;
+    font-family: "Vazirmatn", sans-serif;
                                                 
 }
-header {
-    height: 65px;
+.container {
+    max-width: 1226;
+    margin: 0 auto;
+}
+
+
+.flex {
     display: flex;
-    justify-content: space-between; 
-   align-items: center;
-   padding: 0 20px;
-    
 }
-header div {
-    /* height: 100px; */
-}
-.menu-icon {
-    /* background-image: url(./assets/menu.svg); */
-    /* width: 24px;
-    height: 24px; */
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
-    
-}
-.logo-el {
-    /* background-image: url(./assets/LOGO.png); */
-    /* width: 95px;
-    height: 32px; */
-    
-}
-.user-icon {
-    /* background-image: url(./assets/user.png); */
-    /* width: 24px;
-    height: 24px; */
-    /* background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #E8F4FA;
-    border-radius: 4px;
-    border: none; */
-}
-/* main */
 
-
-
-
-
-.banner {
-    width: 100%;
-    height: 140px;
-    background-image: url(./assets/home.png) ;
-    background-size: cover;
-    background-repeat: no-repeat;
-    
-}
-.buttons{
-    display: flex;
-    justify-content: space-evenly;
-    margin: 20px;
-    
-}
-.buttons-ways {
-    border: 1px solid #1774A3;
-    width: 96px;
-    height: 32px;
-    font-size: 10px;
-    font-weight: 400;
-    color:#0C3A52;
-    border-radius: 8px;
-    /* padding: 5px 15px; */
-    text-align: center;
-    padding: 8px 0;
-    
-}
-.select {
-    color: white;
-    background-color: #1D91CC;
-}
-.travel-info {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
+.center-item {
     align-items: center;
-
-}
-.travel-info form input{
-    width: 320px;
-    height: 40px;
-    border: 1px solid #DFDFDF;
-    border-radius: 8px;
-    direction: rtl;   
-    padding: 0 20px;
-    font-size: 12px;
-    font-weight: 400;
-    margin-top: 20px;
-}
-input {
-    -moz-appearance:none; /* Firefox */
-    -webkit-appearance:none; /* Safari and Chrome */
-    appearance:none;
-    /* position: relative; */
 }
 
-/* form {
-    position: relative;
-} */
-.start-lable {
-    position: absolute;
-    right: 10px;
-    top: 10px;
+/*header style */
+.ham-menue {
+    display: none;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20 px;
-}
+ header  div{
+    justify-content: space-between ;
+ }
+ nav {
+    display: block;
+ }
 
-form button {
-    width: 320px;
-    height: 40px;
-    border: none;
-    border-radius: 8px;
-    background-color: #1D91CC;
+ nav ul  {
+    list-style: none;
+    gap: 32px;
+ }
+ ul li a {
+    text-decoration: none;
+    color:  #606060;
+    font-size: 20px;
+    padding: 10px;
+
+ }
+ ul li a:hover {
+    border-bottom: 2px solid #1D91CC;
+    color: #1D91CC;
+ }
+ .support {
+    gap: 16px;
+ }
+ .call {
+    gap: 16px;
+    display: block;
+ }
+ .login {
     color: white;
-    margin-top: 20px;
+    background-color:#1D91CC;
+    border-radius: 8px;
+    border: none;
+    padding: 8px 16px;
+    font-size: 14px;
+    gap: 8px;
+    /* width: 134px; */
+    height: 40px;
+    font-weight: 500;
+    font-family: "Vazirmatn", sans-serif;
+ }
 
+ .gray-user{
+    display: none;
 }
+
+
+ /* main */
+
+
+ .banner {
+    background-image: url(./assets/home\ page\ piccccc.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+ }
+
+
+
+
+
+
+
+
+ @media(max-width:390px){
+
+    header {
+        height: 64px;
+        padding: 8px 16px;
+    }
+
+
+    nav {
+        display: none;
+    }
+    
+    button span {
+        display: none;
+    }
+    
+    .call {
+        display: none;
+    }
+    .ham-menue {
+        display: block;
+    }
+    .gray-user{
+        display: block;
+    }
+    .login {
+        display: none;
+    }
+    .logo {
+        width: 96px;
+        height: 32px;
+    }
+
+
+
+ }
