--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ body {
     background-image: url(./assets/home\ page\ piccccc.png);
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
+    height: 340px;
  }
 
 
@@ -123,6 +125,13 @@ body {
     .logo {
         width: 96px;
         height: 32px;
+    }
+
+    /* main*/
+
+    .banner {
+        background-image: url(./assets/home\ page\ screen.png);
+        height: 140px;
     }
 
 
