--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: "Vazirmatn", sans-serif;
 }
 body {
     
@@ -10,7 +11,7 @@ body {
                                                 
 }
 .container {
-    max-width: 1226;
+    max-width: 1226px;
     margin: 0 auto;
 }
 
@@ -74,18 +75,65 @@ body {
  .gray-user{
     display: none;
 }
-
-
- /* main */
-
-
- .banner {
+.banner {
     background-image: url(./assets/home\ page\ piccccc.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: 340px;
  }
+
+
+ /* main */
+ main {
+    height: 100vh;
+    position: relative;
+ }
+
+ .travel-info {
+    height: 191px;
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    top: -70px;
+    border-radius: 8px;
+    border: 1px solid #EDEDED;
+    padding: 24px;
+    flex-direction: column;
+    gap: 30px;
+
+ }
+ .buttons button {
+    width: 98px;
+    height: 40px;
+    border-radius: 8px;
+    border: 1px solid #1D91CC ;
+    font-size: 12px;
+ }
+ .select-btn {
+    background-color: #1D91CC;
+    color: #fff;
+ }
+ .detail {
+    flex-direction: row;
+    gap: 10px;
+ }
+
+ .same-style {
+    border-radius: 8px;
+    width: 180px;
+    height: 48px;
+    border: 1px solid #DFDFDF;
+    padding: 5px 10px;
+   
+        
+ }
+ .search {
+    gap: 8px;
+    justify-content: center;
+ }
+ 
+ 
 
 
 
