--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ body {
     height: 100vh;
     position: relative;
  }
+ .main-container {
+    position: absolute;
+    top: 170px;
+ }
 
  .travel-info {
     height: 191px;
@@ -101,6 +105,9 @@ body {
     padding: 24px;
     flex-direction: column;
     gap: 30px;
+    box-shadow: 0px 8px 16px 0px #00000014;
+    box-shadow: 0px 0px 4px 0px #0000000A;
+
 
  }
  .buttons button {
@@ -132,7 +139,66 @@ body {
     gap: 8px;
     justify-content: center;
  }
- 
+ .collection {
+   
+    gap: 24px;
+
+ }
+ .horizental {
+    gap: 24px;
+    
+
+ }
+ .vertical{
+    gap: 24px;
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+ }
+ .other-services {
+    background-color: #E8F4FA;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    padding: 15px 0;
+    
+
+ }
+ .other-services a {
+    text-decoration: none;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-weight: 700;
+ }
+ .content {
+    justify-content: space-between;
+    padding: 20px 0 ;
+ }
+ .social-media {
+    gap: 15px;
+
+ }
+ .social-media a{
+    background-color: #11577A;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    height: 66px;
+ }
+
+ .app-name {
+    gap: 10px;
+ }
+ .app-name span {
+    font-weight: 700;
+    font-size:20px ;
+    color: #404040;
+ }
+ .app-name p {
+    color: #606060;
+ }
+
+
  
 
 
